--- a/back/package.json
+++ b/back/package.json
@@ -45,7 +45,9 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
+    "jimp": "^0.16.1",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
