--- a/back/package.json
+++ b/back/package.json
@@ -45,6 +45,7 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jimp": "^0.16.1",
